// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!errorHidden && !props.isValid() 1`] = `
<FormsyInput
  className="CLASSNAME"
  disabled={false}
  errorMessageStyles={Object {}}
  getErrorMessage={[Function]}
  getValue={[Function]}
  id="ID"
  isValid={[Function]}
  name="NAME"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="PLACEHOLDER"
  setValue={[Function]}
  submitAttempted={true}
  type="TYPE"
  wrapperClassName="WRAPPER_CLASSNAME"
/>
`;

exports[`shallow render 1`] = `
<FormsyInput
  className="CLASSNAME"
  disabled={false}
  errorMessageStyles={Object {}}
  getErrorMessage={[Function]}
  getValue={[Function]}
  id="ID"
  isValid={[Function]}
  name="NAME"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="PLACEHOLDER"
  setValue={[Function]}
  submitAttempted={false}
  type="TYPE"
  wrapperClassName="WRAPPER_CLASSNAME"
/>
`;
